# classifying_christmas_jumpers

./: README.md  pyproject.toml
notebooks/: 01_Scraping.ipynb  01_Scraping.py  02_Cleaning.ipynb  02_Cleaning.py  03_image_preprocessing.ipynb  03_image_preprocessing.py  04_split_train_test_validate.ipynb  04_split_train_test_validate.py  05_data_exploration.ipynb  06_custom_cnns.ipynb  06_custom_cnns.py  07_pretrained_models.ipynb  07_pretrained_models.py  functions_custom.py  functions_pretrained.py  generating_report_outputs.ipynb  generating_report_outputs.py  generating_report_outputs_2.ipynb  generating_report_outputs_2.py  generating_report_outputs_conc.ipynb  generating_report_outputs_conc.py  generating_report_outputs_standardise_graphs.ipynb
